# grokingclaw-chain

./: .eslintrc.js  .gitignore  .lycheeignore  .npmrc  .typos.toml  CONTRIBUTING.md  README.md  binary-build-list.json  deny.toml  dprint.json  turbo.json  vercel.json
.cargo/: config.toml
.config/: nextest_external.toml
.github/: CODEOWNERS  crates-filters.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report_infra.md  doc-bug.md
.github/PULL_REQUEST_TEMPLATE/: tooling.md
.github/workflows/: _cargo_deny.yml  _docs_lint.yml  _docusaurus.yml  _e2e.yml  _execution_cut.yml  _ledgernano.yml  _move_ide.yml  _rust.yml  _rust_examples.yml  _rust_lints.yml  _rust_tests.yml  _split_cluster.yml  _typos.yml  apps_apps-backend_prod_deploy.yml  apps_evm-bridge_deploy.yml  apps_explorer_deploy.yml  apps_wallet_dashboard_deploy.yml  cargo_llvm_cov.yml  changesets_ci.yml  changesets_ci_comment.yml  choco_publish.yml  ci.yml  develop_ci_slack_report.yml  labeler.yml  links_checker.yml  pr_lint.yml  preview_wiki.yml  release.yml  release_docker.yml  release_fullnode_docker_setup.yml  release_move_ide.yml  release_wiki.yml  tag.yml  turbo_hierarchy.yml  turbo_nightly.yml  upload-docs-to-aws.yml
apps/apps-backend/: README.md  jest-e2e.json  tsconfig.json  vercel.json
apps/evm-bridge/: .gitignore  playwright.config.ts  tailwind.config.ts  vercel.json  vite.config.ts
apps/explorer/: .env.example  README.md  ampli.json  package.json  playwright.config.ts  prependLicense.mjs  vite.config.ts
apps/ui-icons/: CHANGELOG.md  README.md  package.json  svgrrc.config.js
apps/ui-kit/: CHANGELOG.md  README.md  package.json  tailwind.config.ts  turbo.json  vite.config.ts
apps/wallet/: README.md  ampli.json  package.json  playwright.config.ts  rspack.config.ts
apps/wallet-dashboard/: .env.defaults  instrumentation-client.ts  instrumentation.ts  jest.config.ts  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
chocolatey/: iota.nuspec
consensus/config/: Cargo.toml
consensus/config/src/: committee.rs  crypto.rs
consensus/core/: Cargo.toml  build.rs
consensus/simtests/: Cargo.toml
contracts/agent_identity/: Move.toml
crates/iota-analytics-indexer/: Cargo.toml  README.md
crates/iota-aws-orchestrator/: README.md
crates/iota-benchmark/: .gitignore  Cargo.toml
crates/iota-indexer/: build.rs  (+1 more)
crates/iota-localnet/: Cargo.toml
crates/iota-localnet/src/: commands.rs  lib.rs  main.rs
crates/iota-localnet/tests/: cli_tests.rs
crates/iota-mainnet-unlocks/: Cargo.toml
crates/iota-mainnet-unlocks/src/: store.rs
crates/iota-stardust-types/: Cargo.toml  README.md
crates/iota-stardust-types/src/: lib.rs  mod.rs
crates/iota-stardust-types/src/block/: convert.rs  error.rs  ids.rs  macro.rs  mod.rs  protocol.rs
crates/iota-stardust-types/src/block/address/: alias.rs  bech32.rs  ed25519.rs  mod.rs  nft.rs
crates/iota-stardust-types/src/block/output/: alias.rs  alias_id.rs  basic.rs  chain_id.rs  foundry.rs  foundry_id.rs  mod.rs  native_token.rs  nft.rs  nft_id.rs  output_id.rs  token_id.rs  treasury.rs
crates/iota-stardust-types/src/block/output/feature/: issuer.rs  metadata.rs  mod.rs  sender.rs  tag.rs
crates/iota-stardust-types/src/block/output/token_scheme/: mod.rs  simple.rs
crates/iota-stardust-types/src/block/output/unlock_condition/: address.rs  expiration.rs  governor_address.rs  immutable_alias_address.rs  mod.rs  state_controller_address.rs  storage_deposit_return.rs  timelock.rs
crates/iota-stardust-types/src/block/payload/: mod.rs
crates/iota-stardust-types/src/block/payload/milestone/: mod.rs
crates/iota-stardust-types/src/block/payload/milestone/option/: mod.rs  parameters.rs
crates/starfish/config/: Cargo.toml
crates/starfish/config/src/: crypto.rs  parameters.rs
crates/starfish/config/tests/snapshots/: parameters_test__parameters.snap
dapps/: README.md
iota-execution/: README.md
kiosk/: Move.toml
linting/: .eslintrc.precommit.js
scripts/: bench_sweep.py  generate-release-notes.sh  update_all_snapshots.sh  update_fastcrypto.sh  update_grpc_types.sh  update_light_client_checkpoints.sh  update_move.sh
setups/: README.md
(+3490 files in other folders)
