[package]
name = "iota-localnet"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
# external dependencies
anemo.workspace = true
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
fastcrypto.workspace = true
futures.workspace = true
prometheus.workspace = true
rand.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
url.workspace = true

# internal dependencies
bin-version.workspace = true
iota-config.workspace = true
iota-faucet.workspace = true
iota-genesis-builder.workspace = true
iota-graphql-rpc = { workspace = true, optional = true }
iota-indexer = { workspace = true, optional = true }
iota-keys.workspace = true
iota-protocol-config.workspace = true
iota-sdk.workspace = true
iota-swarm.workspace = true
iota-swarm-config.workspace = true
iota-types.workspace = true
telemetry-subscribers.workspace = true

[dev-dependencies]
iota-macros.workspace = true
iota-metrics.workspace = true
iota-simulator.workspace = true

[target.'cfg(msim)'.dependencies]
msim.workspace = true

[features]
indexer = ["dep:iota-indexer", "dep:iota-graphql-rpc"]
