[package]
name = "iota-stardust-types"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
bech32 = { version = "0.9.1", default-features = false }
bitflags.workspace = true
derive_more = { workspace = true, features = ["from", "as_ref", "deref", "deref_mut", "display"] }
getset.workspace = true
iota-crypto = { version = "0.23.2", default-features = false, features = ["blake2b", "ed25519"] }
iterator-sorted = { version = "0.2.0", default-features = false }
packable = { workspace = true, features = ["primitive-types"] }
prefix-hex = { workspace = true, features = ["primitive-types"] }
primitive-types.workspace = true
serde.workspace = true
serde_json.workspace = true
# optional dependencies
zeroize = { version = "1.7.0", default-features = false, features = ["zeroize_derive"], optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true, features = ["alloc"] }

[features]
default = ["std", "serde"]
irc_27 = ["serde"]
irc_30 = ["serde"]
serde = ["packable/serde", "primitive-types/serde_no_std", "zeroize?/serde"]
std = ["packable/std", "prefix-hex/std", "primitive-types/std", "bitflags/std"]
