[package]
name = "starfish-config"
version = "0.1.0"
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
# external dependencies
blake3 = "1.8.2"
fastcrypto = { workspace = true, features = ["copy_key"] }
rand.workspace = true
rs_merkle.workspace = true
serde.workspace = true
tracing.workspace = true

# internal dependencies
iota-network-stack.workspace = true
iota-sdk-types.workspace = true

[dev-dependencies]
insta.workspace = true
